# configs

./: Cargo.toml
src/: lib.rs  main.rs
src/common/: colors_helper.rs  constants.rs  mod.rs  paths_helper.rs  versions_helper.rs
src/handlers/: bindings_handler.rs  commands_handler.rs  mod.rs  repository_handler.rs  workspace_handler.rs
src/types/: bindings.rs  cli.rs  errors.rs  mod.rs
