[package]
name = "configs"
version = "0.1.5"
edition = "2021"

[dependencies]
commons = { git = "ssh://git@github.com/jkaraskiewicz/commons.git", version = "0.2.5" }
versions = { git = "ssh://git@github.com/jkaraskiewicz/versions.git", version = "0.2.5" }
clap = { version = "4.5.29", features = ["derive", "string"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_yml = "0.0.12"
clap_complete = "4.5.47"
anyhow = "1.0.95"
path-absolutize = "3.1.1"
toml = "0.8.20"
lazy_static = "1.5.0"
fancy-regex = "0.14.0"
colored = "3.0.0"
itertools = "0.14.0"
symlink = "0.1.0"
git2 = "0.20.0"
dircpy = "0.3.19"
