[package]
name = "configs"
version = "0.1.5"
edition = "2021"

[dependencies]
commons = { git = "https://github.com/jkaraskiewicz/commons.git", version = "0.2.5" }
versions = { git = "https://github.com/jkaraskiewicz/versions.git", version = "0.2.5" }
clap = { version = "4.5.29", features = ["derive", "string"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_yml = "0.0.12"
clap_complete = "4.5.47"
anyhow = "1.0.95"
path-absolutize = "3.1.1"
colored = "3.0.0"
itertools = "0.14.0"
symlink = "0.1.0"
